--- a/ProyectoReservas/Views/PaginaInicio/IndexInicio.cshtml
+++ b/ProyectoReservas/Views/PaginaInicio/IndexInicio.cshtml
@@ -106,7 +106,7 @@
                                         <li class="dinone">Contactos : <img style="margin-right: 15px;margin-left: 15px;" src="../images/phone_icon.png" alt="#"><a href="#">0993872668</a></li>
                                         <li class="dinone"><img style="margin-right: 15px;" src="../images/mail_icon.png" alt="#"><a href="#">reservas2024@gmail.com</a></li>
                                         <li class="dinone"><img style="margin-right: 15px;height: 21px;position: relative;top: -2px;" src="../images/location_icon.png" alt="#"><a href="#">Quito-Ecuador</a></li>
-                                        <li class="button_user"><a class="button" href="../Login/IniciarSesion">Iniciar Sesión</a><a class="button" href="/Login/Registro">Registro</a></li>
+                                        <li class="button_user"><a class="button" href="../Login/IniciarSesion">Iniciar Sesión</a><a class="button" href="../Login/Registro"> Registro</a></li>
                                        
                                         <li>
                                             <button type="button" id="sidebarCollapse">
